[package]
name = "concess"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
async-trait = "0.1"

itertools = "0.10"

phf = { version = "0.11", features = ["macros"] }

tokio = { version = "1.21", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

ldap3_proto = "0.2"

radius = "0.3"

nom = "7.1"

tracing = "0.1"
tracing-subscriber = "0.3"
tracing-log = "0.1"

password-hash = { version = "0.4", features = ["alloc"] }
argon2 = "0.4"

structopt = "0.3"

serde = { version = "1", features = ["derive"] }
serde_with = "1.14"
serde_yaml = "0.9"
serde_bytes = "0.11"